--- a/CryptoTrader/CryptoTrader.csproj
+++ b/CryptoTrader/CryptoTrader.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <NeutralLanguage>en-AU</NeutralLanguage>
     </PropertyGroup>
 
 </Project>
