Added loading of external addon assemblies

--- a/CryptoTrader/CryptoTrader.csproj
+++ b/CryptoTrader/CryptoTrader.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DarkIce.Toolkit.Core" Version="1.0.2.4900" />
       <PackageReference Include="Spectre.Console" Version="0.42.0" />
     </ItemGroup>
 
